--- a/index.html
+++ b/index.html
@@ -3,47 +3,47 @@
 
 <head>
     <title>NYT Search</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<<<<<<< HEAD
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <<<<<<< HEAD
 </head>
 
 <body>
-    <div class="container">
-        <div class="col-lg-12" id="main-col">
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <h1 class="display-3">NYT Article Search</h1>
-                    <p class="lead">this is an activity search</p>
-                </div>
+<div class="container">
+    <div class="col-lg-12" id="main-col">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-3">NYT Article Search</h1>
+                <p class="lead">this is an activity search</p>
             </div>
-            <form>
-                <div class="form-group">
-                    <label class="col-form-label" for="formGroupExampleInput" id="searchTerm">Search</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-                </div>
-                <div class="form-group">
-                    <label class="col-form-label" for="formGroupExampleInput2" id="searchRecords"># Records</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                </div>
-                <div class="form-group">
-                    <label class="col-form-label" for="formGroupExampleInput2" id="startYear">Start Year</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                </div>
-                <div class="form-group">
-                    <label class="col-form-label" for="formGroupExampleInput2" id="endYear">End Year</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                </div>
-                <input class="btn btn-primary" type="submit" value="submit" id="submit">
-                <input class="btn btn-primary" type="submit" value="clear" id="clear">
-
-                <div class="well" class="articleContainer" id="articleContainer">
-                    <h2>Top Articles</h2>
-                </div>
-
-
-            
         </div>
+        <form>
+            <div class="form-group">
+                <label class="col-form-label" for="formGroupExampleInput" id="searchTerm">Search</label>
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+            </div>
+            <div class="form-group">
+                <label class="col-form-label" for="formGroupExampleInput2" id="searchRecords"># Records</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+            </div>
+            <div class="form-group">
+                <label class="col-form-label" for="formGroupExampleInput2" id="startYear">Start Year</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+            </div>
+            <div class="form-group">
+                <label class="col-form-label" for="formGroupExampleInput2" id="endYear">End Year</label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+            </div>
+            <input class="btn btn-primary" type="submit" value="submit" id="submit">
+            <input class="btn btn-primary" type="submit" value="clear" id="clear">
+
+            <div class="well" class="articleContainer" id="articleContainer">
+                <h2>Top Articles</h2>
+            </div>
+
+
     </div>
+</div>
 =======
 
 </head>
@@ -54,12 +54,10 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-3">NYT Article Search</h1>
-                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its
+                    parent.</p>
             </div>
         </div>
-
-
-
 
 
     </div>
